[package]
name = "rust_gui"
version = "0.1.0"
authors = ["domtom <domtom1126@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.gio]
version = ""
features = ["v2_44"]
